# polar-to-sqlite

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: dogsheep-spike-findings.md
polar_to_sqlite/: __init__.py
