[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polar-to-sqlite"
version = "0.1.0"
description = "Save training data from Polar AccessLink API to SQLite"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Filip Berntsson", email = "filip@filipberntsson.com"}
]
dependencies = [
    "sqlite-utils>=3.30",
    "click>=8.0",
    "requests>=2.28",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "requests-mock>=1.9",
]

[project.scripts]
polar-to-sqlite = "polar_to_sqlite.cli:cli"

[project.urls]
Homepage = "https://github.com/filipberntsson/polar-to-sqlite"
Issues = "https://github.com/filipberntsson/polar-to-sqlite/issues"
Documentation = "https://github.com/filipberntsson/polar-to-sqlite/blob/main/README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
